--- a/WordGame/Resources/en.lproj/Localizable.strings
+++ b/WordGame/Resources/en.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 
-"home_correct_attemps" = "Correct attempts";
-"home_wrong_attemps" = "Wrong attempts";
+"home_correct_attemps" = "Correct attempts: ";
+"home_wrong_attemps" = "Wrong attempts: ";
 "home_correct_text" = "Correct";
 "home_wrong_text" = "Wrong";
