--- a/WordGame/Resources/en.lproj/Localizable.strings
+++ b/WordGame/Resources/en.lproj/Localizable.strings
@@ -6,7 +6,15 @@
   
 */
 
+// Home Screen
 "home_correct_attemps" = "Correct attempts: ";
 "home_wrong_attemps" = "Wrong attempts: ";
 "home_correct_text" = "Correct";
 "home_wrong_text" = "Wrong";
+
+//Alert View
+"alert_title" = "Game Over";
+"alert_message" = "You have scored";
+"points" = "points";
+"alert_no_title" = "Quit";
+"alert_yes_title" = "Restart";
